# Proto3D

./: .gitignore  CMakeLists.txt  README.md  meson.build
cmake/: FindGLM.cmake
src/: CMakeLists.txt  glad.c  main.cpp  util.cpp  util.h
src/glad/: glad.h
